--- a/Tagalog/Tagalog.ipynb
+++ b/Tagalog/Tagalog.ipynb
@@ -850,17 +850,16 @@
     "        return \"Fake News\"\n",
     "    elif n == 1:\n",
     "        return \"Real News\"\n",
+    "    \n",
+    "def manual_testing():\n",
+    "    news = str(input(\"Paste article text here:\"))\n",
+    "    return print(f'''\n",
+    "             LR Prediction: {output_label(LR_test(news))} \n",
+    "             DT Prediction: {output_label(DT_test(news))} \n",
+    "             GBC Prediction: {output_label(GBC_test(news))} \n",
+    "             RFC Prediction: {output_label(RFC_test(news))}''')\n",
     "\n",
-    "def manual_testing(news):\n",
-    "    return print(\"\\n\\nLR Prediction: {} \\nDT Prediction: {} \\nGBC Prediction: {} \\nRFC Prediction: {}\".format(output_label(LR_test(news)), \n",
-    "                                                                                                              output_label(DT_test(news)), \n",
-    "                                                                                                              output_label(GBC_test(news)), \n",
-    "                                                                                                              output_label(RFC_test(news))))\n",
-    "\n",
-    "news = str(input())\n",
-    "manual_testing(news)\n",
-    "\n",
-    "#https://news.abs-cbn.com/news/multimedia/photo/08/06/21/receiving-and-disinfecting-food-packs-during-ecq"
+    "manual_testing()"
    ]
   },
   {
