--- a/English/English.ipynb
+++ b/English/English.ipynb
@@ -661,16 +661,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d49b9cb7-0d4c-4ea7-8964-1b8c9efe3e81",
-   "metadata": {
-    "id": "d49b9cb7-0d4c-4ea7-8964-1b8c9efe3e81"
-   },
-   "source": [
-    "### Graphing Accuracy of Models"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "7os5cD0B5Emg",
@@ -692,6 +682,16 @@
     "\n",
     "analysis_df.loc[:,[\"RFC\"]] = analysis_df[\"article\"].apply(RFC_test)\n",
     "analysis_df.loc[:,[\"RFC\"]] = np.vectorize(classify_result)(analysis_df[\"label\"],analysis_df[\"RFC\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49b9cb7-0d4c-4ea7-8964-1b8c9efe3e81",
+   "metadata": {
+    "id": "d49b9cb7-0d4c-4ea7-8964-1b8c9efe3e81"
+   },
+   "source": [
+    "### Visualizing Accuracy of Models"
    ]
   },
   {
